--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,13 +11,14 @@
     <header>
       <div class="logo-menu">
         <div class="logo">
-          <img src="imagenes/logo.png" alt="Logo de Ford" />
+          <img src="imagenes/logo.png" alt="Logo de Sena" />
         </div>
         <nav>
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Retos</a></li>
             <li><a href="cuadro.html">Ejemplos</a></li>
+            <li><a href="formulario.html">Formulario</a></li>
           </ul>
         </nav>
       </div>
