--- a/javascript/reto4.html
+++ b/javascript/reto4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Reto#4</title>
+    <title>Reto#3</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -10,25 +10,63 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="css/sytle.css" />
-    <script src="Javascript/perimetro.js"></script>
+    <script src="Javascript/Instructores.js"></script>
   </head>
   <body>
     <header>
       <div class="logo-menu">
         <div class="logo">
-          <img src="imagenes/Logo.png" alt="Logo de Ford" />
+          <img src="imagenes/Logo.png" alt="Logo de Sena" />
         </div>
         <nav>
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Retos</a></li>
             <li><a href="cuadro.html">Ejemplos</a></li>
+            <li><a href="formulario.html">Formulario</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
+      <div class="container">
+        <label for="nombres">Nombres:</label>
+        <select id="nombres">
+          <option value="Jennifer">Jennifer</option>
+          <option value="Sandra">Sandra</option>
+          <option value="Margarita">Margarita</option>
+        </select>
+        <br /><br />
+
+        <label for="apellidos">Apellidos:</label>
+        <select id="apellidos">
+          <option value="Fajardo">Fajardo</option>
+          <option value="Rueda">Rueda</option>
+          <option value="Guarin">Guarin</option>
+        </select>
+        <br /><br />
+
+        <label for="actividades">Actividades:</label>
+        <select id="actividades">
+          <option value="Javascript">Javascript</option>
+          <option value="SQL">SQL</option>
+          <option value="Prototipado">Prototipado</option>
+        </select>
+        <br /><br />
+        <button onclick="verificarSeleccion()">Comprobar</button>
+      </div>
     </main>
-</main>
-</body>
+    <footer>
+      <div class="redes-sociales">
+        <p>
+          Síguenos en el siguiente blog:<a
+            href="https://mercadoslogisticaytecnologia.blogspot.com/"
+            target="_blank"
+            class="icono-sena"
+          ></a>
+        </p>
+      </div>
+      <p>© 2023 Sena</p>
+    </footer>
+  </body>
 </html>
