--- a/javascript/catalogo.html
+++ b/javascript/catalogo.html
@@ -15,13 +15,14 @@
     <header>
       <div class="logo-menu">
         <div class="logo">
-          <img src="imagenes/logo.png" alt="Logo de Ford" />
+          <img src="imagenes/logo.png" alt="Logo de Sena" />
         </div>
         <nav>
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Retos</a></li>
             <li><a href="cuadro.html">Ejemplos</a></li>
+            <li><a href="formulario.html">Formulario</a></li>
           </ul>
         </nav>
       </div>
@@ -68,7 +69,7 @@
           </div>
 
           <div class="retos">
-            <img src="imagenes/nombres.jpeg" alt="perimetro" />
+            <img src="imagenes/Instructores.jpg" alt="Reto#4" />
             <h3>Reto#4</h3>
             <p>
               El programa debe permitir al usuario seleccionar un nombre de una
@@ -79,6 +80,22 @@
               mensaje que indique "La respuesta es incorrecta".
             </p>
             <a href="reto4.html" class="btn-comprar">Reto#4</a>
+          </div>
+          <div class="retos">
+            <img src="imagenes/figuras.jpg" alt="Reto#4" />
+            <h3>Reto#5</h3>
+            <p>
+              programa que muestre las cuatro figuras geométricas básicas
+              (círculo, triángulo, rectángulo, cuadrado) mediante tarjetas. Cada
+              tarjeta tendrá dos botones: "Perímetro" y "Área". Cuando el
+              usuario haga clic en uno de estos botones, se desplegará una
+              ventana modal que permitirá al usuario ingresar los datos
+              necesarios para calcular la operación correspondiente a la figura
+              seleccionada. La ventana modal incluirá un botón "Calcular" para
+              mostrar el resultado de la operación y un botón "Cerrar" para
+              cerrar la ventana modal.
+            </p>
+            <a href="reto5.html" class="btn-comprar">Reto#5</a>
           </div>
         </section>
       </div>
