--- a/javascript/reto1.html
+++ b/javascript/reto1.html
@@ -23,6 +23,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Retos</a></li>
             <li><a href="cuadro.html">Ejemplos</a></li>
+            <li><a href="formulario.html">Formulario</a></li>
           </ul>
         </nav>
       </div>
