--- a/javascript/cuadro.html
+++ b/javascript/cuadro.html
@@ -115,5 +115,17 @@
       </div>
       
     </main>
+    <footer>
+      <div class="redes-sociales">
+        <p>
+          Síguenos en el siguiente blog:<a
+            href="https://mercadoslogisticaytecnologia.blogspot.com/"
+            target="_blank"
+            class="icono-sena"
+          ></a>
+        </p>
+      </div>
+      <p>© 2023 Sena</p>
+    </footer>
   </body>
 </html>
