--- a/javascript/formulario.html
+++ b/javascript/formulario.html
@@ -88,6 +88,17 @@
     <input type="submit" value="Registrarse" />
 </form>
 <script src="Javascript/formulario.js"></script>
-
+<footer>
+      <div class="redes-sociales">
+        <p>
+          Síguenos en el siguiente blog:<a
+            href="https://mercadoslogisticaytecnologia.blogspot.com/"
+            target="_blank"
+            class="icono-sena"
+          ></a>
+        </p>
+      </div>
+      <p>© 2023 Sena</p>
+    </footer>
 </body>
 </html>
